<resources>
    <string name="app_name">ServiceSolutions-TipTracker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_select_job">SelectJob</string>
    <string name="job_title">Job Title</string>
    <string name="job_description_text">Description</string>
    <string name="select_job_string">Select Job</string>
    <string name="search_jobs_string">Search Jobs</string>
    <string name="add_job_string">Add a Job</string>
    <string name="job_description">Job Description</string>
    <string name="cancel_text">Cancel</string>

    <!-- Strings used for navigation drawer -->
    <string name="menu_Open">Open</string>
    <string name="menu_Close">Close</string>
    <string name ="menu_drawer_open">Drawer Open</string>
    <string name ="menu_drawer_close">Drawer Close</string>


    <string name="finished_work">Just finished work?</string>
    <string name="log_income">Log Income</string>
    <string name="what_you_earned">How much have you earned?</string>
    <string name="view_income">View Income</string>
    <string name="change_settings">Want to change your settings?</string>
    <string name="view_settings">View Settings</string>
    <string name="nav_home">Home</string>
    <string name="hours_worked_title">Hours Worked</string>
    <string name="hourly_rate_text">Hourly Rate</string>
    <string name="menu_open">Open</string>
    <string name="change_to_dark_mode">Change To Dark Mode:</string>
    <string name="tip_information">Tip Information</string>
    <string name="track_tips">Track Tips</string>
    <string name="tip_record">Tip Record</string>
    <string name="budgeting">Budgeting</string>
    <string name="budget">Budget</string>
    <string name="calculate_income">Calculate Income</string>
    <string name="settings">Settings</string>
    <string name="view_budget">View Monthly Budget</string>
    <string name="clear_income_data">Clear Income Data</string>
    <string name="clear_expenses_data">Clear Expenses Data</string>
    <string name="clear_jobs_data">Clear Jobs Data</string>
</resources>