<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

   <group android:checkableBehavior="single">
       <item
           android:id="@+id/nav_home"
           android:title="@string/nav_home"
           android:icon="@drawable/ic_home"/>
   </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/tip_information">
            <menu>
                <group>
                    <item
                        android:id="@+id/nav_track_tips"
                        android:title="@string/track_tips"
                        android:icon="@drawable/ic_home"/>
                    <item
                        android:id="@+id/nav_record_tips"
                        android:title="@string/tip_record"
                        android:icon="@drawable/ic_home"/>
                </group>
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/budgeting">
            <menu>
                <group>
                    <item
                        android:id="@+id/nav_budget"
                        android:title="@string/budget"
                        android:icon="@drawable/ic_home"/>
                    <item
                        android:id="@+id/nav_income_calc"
                        android:title="@string/calculate_income"
                        android:icon="@drawable/ic_home"/>
                </group>
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_home"/>
    </group>
</menu>