<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_record_tips"
            android:title="@string/tip_record"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_track_tips"
            android:title="@string/track_tips"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_income_calc"
            android:title="@string/calculate_income"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"/>
    </group>
</menu>